--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "mailtrap": "^3.4.0",
     "mongoose": "^8.7.1",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7"
   },
   "type": "module"
