--- a/frontendV2/package.json
+++ b/frontendV2/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
+    "flowbite": "^2.5.2",
     "framer-motion": "^11.11.9",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.27.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
