--- a/frontendV2/package.json
+++ b/frontendV2/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
+    "reactjs-localstorage": "^1.0.1",
     "slick-carousel": "^1.8.1",
     "zustand": "^5.0.0"
   },
